--- a/index.css
+++ b/index.css
@@ -83,7 +83,7 @@ html{
 #home::before {
     content: " ";
     position: absolute;
-    background: url(../fow2.jpg) no-repeat center center/cover;
+    background: url('images/fow2.jpg') no-repeat center center/cover;
     height: 642px;
     top: 0;
     left: 0;
@@ -179,7 +179,7 @@ html{
 #client-section::before {
     content: "";
     position: absolute;
-    background: url('../fow4.jpg');
+    background: url('images/fow4.jpg');
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -224,7 +224,7 @@ html{
     height: 100%;
     z-index: -1;
     opacity: 0.7;
-    background: url('../fow3.jpg') no-repeat center center/cover;
+    background: url('images/fow3.jpg') no-repeat center center/cover;
  
 }
 
